# logging-system

./: .env-example  .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  logging-system.code-workspace  pyproject.toml  requirements.txt
app/: .env-example  Makefile  pyproject.toml  requirements.txt
app/src/: config.py  main.py
app/src/core/: observability.py
configs/: elasticsearch.yaml  kibana.yaml  otel-collector.yaml  prometheus.web.yaml  prometheus.yaml
configs/grafana/: datasources.yaml
elasticsearch/config/: elasticsearch.yaml  elasticsearch.yml
grafana/config/: datasources.yaml  datasources.yml
grafana/config/provisioning/dashboards/: dashboards.yml
grafana/config/provisioning/datasources/: datasources.yml
kibana/config/: kibana.yaml  kibana.yml
observability_lib/: __init__.py
otel-collector/config/: otel-collector.yaml  otel-collector.yml
prometheus/config/: prometheus.web.yml  prometheus.yml
setup/: Dockerfile  entrypoint.sh  lib.sh
setup/ilm/: ilm-policy.json
setup/roles/: otel-writer.json
setup/templates/: logs-app-template.json
src/: consumer_service.py
tls/: Dockerfile  entrypoint.sh  instances.yml
